name:                pipes-s3
version:             0.1.0.0
synopsis:            A simple interface for streaming data to and from Amazon S3
-- description:         
homepage:            http://github.com/bgamari/pipes-s3
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Pipes.Aws.S3
  other-extensions:    OverloadedStrings, GeneralizedNewtypeDeriving, ScopedTypeVariables
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10,
                       pipes-zlib >=0.4 && <0.5,
                       pipes-bytestring >=2.1 && <2.2,
                       pipes-safe >= 2.2 && <2.3,
                       pipes >=4.1 && <4.2,
                       transformers >=0.5 && <0.6,
                       bytestring >=0.10 && <0.11,
                       text >=1.2 && <1.3,
                       http-client >=0.4 && <0.5,
                       http-client-tls >=0.2 && <0.3,
                       resourcet >=1.1 && <1.2,
                       aws >=0.13 && <0.14
